# magnetic-sensor-data

./: '  ()  .Sensors.py.swg  .Sensors.py.swo  .Sensors.py.swp  .calibration.py.swp  .gitignore  .gitmodules  03272025_HDMM_xyz_data.txt  04152025_HDMM.txt  HDMM_data_numerical_08282024.xlsx  Plan.txt  README.md  Sensors.py  Shift_data.txt  Shift_data_09092024.txt  Shift_data_09302024_gk2.txt  Shift_data_09302024gk.txt  Shift_data_10102024gk.txt  Shift_data_11012024.txt  Shift_data_12112024.txt  Shift_data_12232024.txt  SimulateBField.py  __init__.py  base.py  calibrateprocessing.py  calibration.pkl  calibration.py  curvenote.yml  dfsafjkl  el  flake.nix  flake.nix.old  manual_data_collection.py  multisensor_manual.py  package-lock.json  package.json  processing.py  processing_requirements.txt  prusa_calibration.py  (+5 more)
.devenv/: profile
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
05112023_contest1/: -3.0_-2.0_0.0.data  -3.0_-3.0_0.0.data  -3.0_-4.0_0.0.data  -3.0_-5.0_0.0.data  -4.0_-1.0_0.0.data  -4.0_-2.0_0.0.data  -4.0_-3.0_0.0.data  -4.0_-4.0_0.0.data  -4.0_-5.0_0.0.data  -4.0_0.0_0.0.data  -4.0_1.0_0.0.data  -4.0_2.0_0.0.data  -4.0_3.0_0.0.data  -4.0_4.0_0.0.data  -4.0_5.0_0.0.data  -5.0_-1.0_0.0.data  -5.0_-2.0_0.0.data  -5.0_-3.0_0.0.data  -5.0_-4.0_0.0.data  -5.0_-5.0_0.0.data  -5.0_0.0_0.0.data  -5.0_1.0_0.0.data  -5.0_2.0_0.0.data  -5.0_3.0_0.0.data  -5.0_4.0_0.0.data  -5.0_5.0_0.0.data
20240417-145231-801947/: 20240417-145232-147339.npz  20240417-145232-833509.npz  20240417-145233-338667.npz  20240417-145233-843671.npz  20240417-145234-348242.npz  20240417-145234-852770.npz  20240417-145235-357988.npz  20240417-145235-862924.npz  20240417-145236-367277.npz  20240417-145236-871598.npz  20240417-145237-375896.npz  20240417-145237-880137.npz  (+276 more)
(+636082 files in other folders)
